[Commerce] Fix bugs from creative review
* Wrap cart contents to prevent overflow of fixed side panel when too
short
* Fix sticky top position calculation bug
* Remove sticky style to products sidebar where content is too long
* Cleanup unused styles and elements
* Move negative footer margins to outer element

--- a/css/templates/e-commerce/page.css
+++ b/css/templates/e-commerce/page.css
@@ -214,18 +214,12 @@ amp-selector [option][selected] {
   display: none;
 }
 
-.commerce-panel-empty {
-  background-color: initial;
-}
-
-.commerce-panel-filled {
-  background-color: var(--color-panel);
-}
-
 @media (--breakpoint-md) {
   .commerce-side-panel {
     position: sticky;
-    top: calc(var(--navbar-height) + var(--space-2));
+    top: var(--wide-navbar-height);
+    /* Prevents added top: miscalculation https://github.com/ampproject/amphtml/issues/10664 */
+    margin-top: -1px;
   }
 
   .md-commerce-header {
